--- a/src/destination.html
+++ b/src/destination.html
@@ -48,6 +48,12 @@
         <h1 class="text-2xl font-bold mb-4 text-sky-500">City Overview</h1>
         <p class="text-gray-700 mb-2">You Searched For :</p>
         <h2 id="cityName" class="text-xl font-semibold text-sky-600 mb-4"></h2>
+
+        <div id="loading" class="mt-4 text-gray-500">Loading City Info...</div>
+
+        <div id="cityInfo" class="">
+          
+        </div>
       </div>
     </div>
 
