--- a/src/destination.html
+++ b/src/destination.html
@@ -51,9 +51,32 @@
 
         <div id="loading" class="mt-4 text-gray-500">Loading City Info...</div>
 
-        <div id="cityInfo" class="">
-          
+        <div
+          id="cityInfo"
+          class="hidden mt-4 bg-gray-50 p-4 rounded-lg shadow-inner space-y-3 text-gray-700"
+        >
+          <div class="flex justify-between">
+            <span class="font-semibold"> Latitude: </span>
+            <span id="lat"></span>
+
+            <span class="font-semibold">Longitude :</span>
+            <span id="lon"></span>
+          </div>
+
+          <div class="flex justify-between">
+            <span class="font-semibold">Country : </span>
+
+            <span id="country"></span>
+            <span class="font-semibold">State :</span>
+            <span id="state"></span>
+          </div>
+
+          <div class="flex justify-between">
+            <span class="font-semibold">Population :</span>
+            <span id="population"></span>
+          </div>
         </div>
+        <p id="error" class="hidden text-red-500 mt-2 font-semibold">City Not Found...</p>
       </div>
     </div>
 
