--- a/src/destination.html
+++ b/src/destination.html
@@ -58,16 +58,18 @@
           <div class="flex justify-between">
             <span class="font-semibold"> Latitude: </span>
             <span id="lat"></span>
-
+          </div>
+          <div class="flex justify-between">
             <span class="font-semibold">Longitude :</span>
             <span id="lon"></span>
           </div>
 
           <div class="flex justify-between">
             <span class="font-semibold">Country : </span>
-
             <span id="country"></span>
-            <span class="font-semibold">State :</span>
+          </div>
+          <div class="flex justify-between">
+             <span class="font-semibold">State :</span>
             <span id="state"></span>
           </div>
 
@@ -76,6 +78,8 @@
             <span id="population"></span>
           </div>
         </div>
+        <a id="weatherBtn" class="block mt-4 bg-sky-500 text-white py-2 rounded hover:bg-sky-600">Check Weather</a>
+
         <p id="error" class="hidden text-red-500 mt-2 font-semibold">City Not Found...</p>
       </div>
     </div>
