--- a/src/destination.html
+++ b/src/destination.html
@@ -78,7 +78,9 @@
             <span id="population"></span>
           </div>
         </div>
+        
         <a id="weatherBtn" class="block mt-4 bg-sky-500 text-white py-2 rounded hover:bg-sky-600">Check Weather</a>
+        <a id="placeBtn" class="block mt-4 bg-sky-500 text-white py-2 rounded hover:bg-sky-600">Check Places</a>
 
         <p id="error" class="hidden text-red-500 mt-2 font-semibold">City Not Found...</p>
       </div>
