--- a/src/weather.html
+++ b/src/weather.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Smart Travel Planner</title>
+    <title>Weather-Smart Travel Planner</title>
     <link
       rel="icon"
       href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS0ku_JAxG2yYPtQ1m3e0XNY3vaw5bL8IhHBg&s"
@@ -45,7 +45,29 @@
              <div id="loading" class="text-gray-500 animate-pulse">Fetching Weather data...</div>
 
              <!-- Weather Data -->
-              <div></div>
+              <div id="weatherBox" class="mt-6 bg-sky-50 rounded-xl p-5 space-y-4 text-gray-700 ">
+                <div class="flex justify-between ">
+                <span class="font-semibold">🌡️ Temperature:</span>
+                <span><span id="temp"></span>°C</span>
+              </div>
+              <div class="flex justify-between mt-2">
+                <span class="font-semibold">😊 Feels like:</span>
+                <span><span id="feels"></span>°C</span>
+              </div>
+               <div class="flex justify-between mt-2">
+                <span class="font-semibold">☁️ Condition:</span>
+                <span id="desc" class="capitalize"></span>
+              </div>
+              <div class="flex justify-between mt-2">
+                <span class="font-semibold">💧 Humidity:</span>
+                <span><span id="humidity"></span>%</span>
+              </div>
+               <div class="flex justify-between mt-2">
+                <span class="font-semibold">💨 Wind Speed:</span>
+                <span><span id="wind"></span>m/s</span>
+              </div>
+              </div>
+              
 
               <!--Error-->
               <p id="error" class="hidden text-red-600 mt-4 font-semibold">❌ Weather Data Not Found</p>
