--- a/src/place.html
+++ b/src/place.html
@@ -11,7 +11,7 @@
 
     <link rel="stylesheet" href="./output.css" />
 </head>
-<body class="bg-linear-to-br from-sky-300 to-sky-300 min-h-screen">
+<body class="bg-linear-to-br from-green-100 to-green-400 min-h-screen">
     <!-- Navbar -->
     <nav class="bg-white shadow-md">
       <div class="max-w-6xl mx-auto px-4">
@@ -34,5 +34,27 @@
         </div>
       </div>
     </nav>
+
+    <!-- Main Content -->
+
+    <div class="max-w-5xl mx-auto mt-20 px-4">
+      <h1 class="text-3xl font-bold text-center text-green-700 mb-2">Toursit Places</h1>
+
+      <h2 id="cityName" class="text-center text-gray-600 mb-8"></h2>
+
+      <p id="loading" class="text-gray-500 animate-pulse text-center">Loading Places...</p>
+
+      <!-- places data -->
+
+      <div id="placeBox" class="hidden grid-cols-1 sm:grid-cols-2 md:grid-cols-4 lg:grid-cols-4 gap-6">
+
+      </div>
+
+      <!-- Error -->
+       <p id="error" class="hidden text-center text-red-700 font-semibold">❌ Places Not Found</p>
+
+    </div>
+
+      <script src="./js/place.js"></script>
 </body>
 </html>
