--- a/src/place.html
+++ b/src/place.html
@@ -38,7 +38,7 @@
     <!-- Main Content -->
 
     <div class="max-w-5xl mx-auto mt-20 px-4">
-      <h1 class="text-3xl font-bold text-center text-green-700 mb-2">Toursit Places</h1>
+      <h1 class="text-3xl font-bold text-center text-green-700 mb-2">Tourist Places</h1>
 
       <h2 id="cityName" class="text-center text-gray-600 mb-8"></h2>
 
