--- a/src/budget.html
+++ b/src/budget.html
@@ -11,12 +11,12 @@
 
     <link rel="stylesheet" href="./output.css" />
 </head>
-<body class="bg-linear-to-br from-sky-300 to-sky-300 min-h-screen">
+<body class="bg-linear-to-br from-green-100 to-green-400 min-h-screen">
     <!-- Navbar -->
     <nav class="bg-white shadow-md">
       <div class="max-w-6xl mx-auto px-4">
         <div class="flex justify-between items-center h-16">
-          <div class="text-xl font-bold text-blue-600">SmartTravel</div>
+          <div class="text-xl font-bold text-green-600">SmartTravel</div>
           <div class="hidden md:flex space-x-6">
           <a href="travel.html" class="text-gray-700 hover:text-blue-600">Home</a>
 
@@ -34,5 +34,10 @@
         </div>
       </div>
     </nav>
+
+   <div class="bg-white h-50 w-full">
+    <h1 class="text-2xl font-bold text-green-700 text-center mt-0.5 pt-10">Travel Budget Planner</h1>
+      
+   </div>
 </body>
 </html>
