--- a/src/place.html
+++ b/src/place.html
@@ -46,7 +46,7 @@
 
       <!-- places data -->
 
-      <div id="placeBox" class="hidden grid-cols-1 sm:grid-cols-2 md:grid-cols-4 lg:grid-cols-4 gap-6">
+      <div id="placeBox" class="hidden grid grid-cols-1 sm:grid-cols-2 md:grid-cols-4 lg:grid-cols-4 gap-6">
 
       </div>
 
